--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="./styles.css">
-    <title>DemoApp</title>
+
+    <title>Demo app</title>
 </head>
 <body>
     <h1>Bloqueado</h1>
